Minor Textual changes

--- a/views/partials/rules.ejs
+++ b/views/partials/rules.ejs
@@ -29,7 +29,7 @@
                             We recommend, 1 hustler and 2 champs if you're 3 in size or 1 hustler and 3 champs if you're 4 in size. But there is no hard-rule in how you want to spread your team.
                         </li>
                         <li id="sec-office-stay">
-                            Also, it is mandatory for a team to stay in office during the Knockathon event till Saturday's Presentation. Ladies who are willing to stay in office during the night are welcome. But, if they prefer to hack from home, that is fine too.
+                            Also, it is mandatory for a team to stay in office during the Knockathon event till the Working demo presentation. Ladies who are willing to stay in office during the night are welcome. But, if they prefer to hack from home, that is fine too.
                         </li>
                     </ul>
                 </div>
@@ -61,7 +61,7 @@
                         </li>
                         <li>
                             During the event, it is mandatory for team members 
-                            (<a href="#sec-office-stay">except for ladies</a>) to stay in office. If found otherwise, it may be a reason for rejection.
+                            (except for ladies) to stay in office. If found otherwise, it may be a reason for rejection.
                         </li>
                     </ul>
                 </div>
@@ -75,10 +75,13 @@
                                 <li><strong>Idea Presentation</strong> &ndash; An hour after registration. This is going to be a very quick, punch line presentation on your idea to other teams. This presentation is to avoid confusions among other teams in case they end up thinking the same idea  as yours.
                                 </li>
                                 <li>
-                                    <strong>Concept Presentation</strong> &ndash; You'll present the concept on Saturday, August 6, 2016 at 0730 hours - 0900 hours. There may be eliminations if found the idea is copied or not complying with the theme. However, you can always rethink a new one! It means, the idea could be rejected but, the team can go back to their drawing boards.
+                                    <strong>Concept Presentation</strong> &ndash; You'll be presenting the concept. There may be eliminations if found the idea is copied or not complying with the theme. However, you can always rethink a new one! It means, the idea could be rejected but, the team can go back to their drawing boards.
                                 </li>
                                 <li>
-                                    <strong>Demo Day</strong> &ndash; You will present a demo of your app / product on Monday, August 8, 2016, in       front of all your colleagues, and they are going to vote to show their love.
+                                    <strong>Working Demo</strong> &ndash; In the last checkpoint of the day, you will present a demo of your app / product in front of all your competitors.
+                                </li>
+                                <li>
+                                    <strong>Final Presentation</strong> &ndash; You will present a working demo of your app / product in front of all your colleagues and the panel. They are going to vote to show their love.<br /><br />
                                     Note: The audience vote accounts for 30% of the total score. The voting will be anonymous.
                                 </li>
                             </ul>
@@ -117,7 +120,7 @@
                         </tr>
                         <tr>
                             <td class="success" rowspan="5">Sat, 6th</td>
-                            <td>0730 &ndash; 0900 hours</td>
+                            <td>0830 &ndash; 1000 hours</td>
                             <td><strong>Idea Mockup - Presentation to Panel</strong></td>
                         </tr>
                         <tr>
